tests/partial-sigs/should_fail/WildcardInADT1.hs
{-# LANGUAGE PartialTypeSignatures #-}
module WildcardInADT1 where

data Foo a = Foo (Either _ a)
