tests/partial-sigs/should_fail/WildcardInADT1.stderr

WildcardInADT1.hs:4:26: error: [GHC-65507]
    • Wildcard ‘_’ not allowed
    • In the definition of data constructor ‘Foo’
